--- a/dune
+++ b/dune
@@ -2,8 +2,9 @@
   (name pyml)
   (modules numpy py pycaml pyml_arch pytypes pywrappers)
   (c_names numpy_stubs pyml_stubs)
+  (flags :standard -thread)
   (wrapped false)
-  (libraries bigarray stdcompat pyutils))
+  (libraries bigarray stdcompat pyutils threads.posix))
 
 (executables
   (names generate)
