--- a/pyml.opam
+++ b/pyml.opam
@@ -7,6 +7,7 @@ license: "BSD"
 dev-repo: "git+https://github.com/thierry-martinez/pyml.git"
 build: [make "all" "pymltop" "pymlutop" {utop:installed} "PREFIX=%{prefix}%"]
 install: [make "install" "PREFIX=%{prefix}%"]
+run-test: [make "tests"]
 synopsis: "OCaml bindings for Python"
 description: "OCaml bindings for Python 2 and Python 3"
 depends: [
