--- a/pyml.opam
+++ b/pyml.opam
@@ -14,6 +14,7 @@ depends: [
   "ocaml" {>= "3.12.1" & < "4.12.0"}
   "ocamlfind" {build}
   "stdcompat" {>= "13"}
+  "conf-python-3-dev" {with-test}
 ]
 depopts: ["utop"]
 version: "20200518"
