--- a/pyml.opam
+++ b/pyml.opam
@@ -5,13 +5,12 @@ homepage: "http://github.com/thierry-martinez/pyml"
 bug-reports: "http://github.com/thierry-martinez/pyml/issues"
 license: "BSD-2-Clause"
 dev-repo: "git+https://github.com/thierry-martinez/pyml.git"
-build: [make "all" "pymltop" "pymlutop" {utop:installed} "PREFIX=%{prefix}%"]
-install: [make "install" "PREFIX=%{prefix}%"]
-run-test: [make "test"]
+build: ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} "@doc" {with-doc}]
 synopsis: "OCaml bindings for Python"
 description: "OCaml bindings for Python 2 and Python 3"
 depends: [
   "ocaml" {>= "3.12.1"}
+  "dune" {>= "1.11.3"}
   "ocamlfind" {build}
   "stdcompat" {>= "13"}
   "conf-python-3-dev" {with-test}
