--- a/pyml.opam
+++ b/pyml.opam
@@ -10,7 +10,7 @@ synopsis: "OCaml bindings for Python"
 description: "OCaml bindings for Python 2 and Python 3"
 depends: [
   "ocaml" {>= "3.12.1"}
-  "dune" {>= "1.11.3"}
+  "dune" {build & >= "1.11.3"}
   "ocamlfind" {build}
   "stdcompat" {>= "13"}
   "conf-python-3-dev" {with-test}
