Compatibility with OCaml <4.06 for Pyops
dune >=2.5 is required for enabled_if in rule stanza

--- a/dune
+++ b/dune
@@ -1,7 +1,7 @@
 (library
   (public_name pyml)
   (modules numpy py pyops pycaml pyml_arch pytypes pywrappers pyutils)
-  (c_names numpy_stubs pyml_stubs)
+  (foreign_stubs (language c) (names numpy_stubs pyml_stubs))
   (wrapped false)
   (libraries bigarray stdcompat))
 
@@ -59,3 +59,27 @@
   (name pyml_tests)
   (modules pyml_tests)
   (libraries pyml pyml_tests_common stdcompat))
+
+(rule
+  (enabled_if (>= %{ocaml_version} 4.06))
+  (target pyops.mli)
+  (deps pyops.mli.new)
+  (action (copy %{deps} %{target})))
+
+(rule
+  (enabled_if (>= %{ocaml_version} 4.06))
+  (target pyops.ml)
+  (deps pyops.ml.new)
+  (action (copy %{deps} %{target})))
+
+(rule
+  (enabled_if (< %{ocaml_version} 4.05))
+  (target pyops.mli)
+  (deps pyops.mli.405)
+  (action (copy %{deps} %{target})))
+
+(rule
+  (enabled_if (< %{ocaml_version} 4.05))
+  (target pyops.ml)
+  (deps pyops.ml.405)
+  (action (copy %{deps} %{target})))
