--- a/dune
+++ b/dune
@@ -16,10 +16,16 @@
   (action (run %{gen})))
 
 (rule
-  (target pyml_arch.ml)
+  (target pyml_arch.ml.sharp)
   (deps pyml_arch.ml.pp)
   (action (with-stdout-to %{target}
     (run %{ocaml-config:native_c_compiler} -E -x c %{deps}))))
+
+(rule
+  (target pyml_arch.ml)
+  (deps pyml_arch.ml.sharp)
+  (action (with-stdout-to %{target}
+    (run sed "/^#/d" %{deps}))))
 
 (library
   (name pyml_tests_common)
