--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
           su ci --command "make STDCOMPAT=/home/ci/stdcompat-19"
       - name: Test
         run: |
-          su ci --command "LD_LIBRARY_PATH=/usr/local/lib pip install numpy"
+          su ci --command "LD_LIBRARY_PATH=/usr/local/lib pip3 install numpy"
           su ci --command "LD_LIBRARY_PATH=/usr/local/lib make STDCOMPAT=/home/ci/stdcompat-19 test"
 
   check-image-fedora-rawhide:
