GitHub Action for Windows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,3 +68,21 @@ jobs:
       - name: Test
         run: |
           make test
+
+  windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup OCaml
+        uses: ocaml/setup-ocaml@v2
+      - name: Install OPAM dependencies
+        run: >
+          opam install --yes stdcompat
+      - name: Make pyml
+        run: |
+          make
+      - name: Test pyml
+        run: |
+          make test
+    
