--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup OCaml
         uses: ocaml/setup-ocaml@v2
+        with:
+          ocaml-compiler: 4.14.x
       - name: Install OPAM dependencies
         run: >
           opam install --yes stdcompat
