--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
           ocaml-compiler: 4.14.x
       - name: Install OPAM dependencies
         run: >
-          opam install --yes ocamlfind stdcompat
+          opam install --yes ocamlfind stdcompat.18
       - name: Make pyml
         run: |
           opam exec -- make
