--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,7 @@ jobs:
           opam install --yes ocamlfind stdcompat.18
       - name: Make pyml
         run: |
+          ls -R D:/.opam
           opam exec -- make
       - name: Test pyml
         run: |
