ls -R with correct path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
           opam install --yes ocamlfind stdcompat.18
       - name: Make pyml
         run: |
-          opam var stdcompat:lib
+          ls -R D:/a/pyml/pyml/_opam/lib/stdcompat
           opam exec -- make
       - name: Test pyml
         run: |
